; ModuleID = '/home/carl/AnghaBench/git/extr_submodule.c_submodule_commits.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule.c_submodule_commits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oid_array = type { i32 }
%struct.string_list = type { i32 }
%struct.string_list_item = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.oid_array* (%struct.string_list*, i8*)* @submodule_commits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.oid_array* @submodule_commits(%struct.string_list* %0, i8* %1) #0 {
  %3 = alloca %struct.oid_array*, align 8
  %4 = alloca %struct.string_list*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.string_list_item*, align 8
  store %struct.string_list* %0, %struct.string_list** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.string_list*, %struct.string_list** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call %struct.string_list_item* @string_list_insert(%struct.string_list* %7, i8* %8)
  store %struct.string_list_item* %9, %struct.string_list_item** %6, align 8
  %10 = load %struct.string_list_item*, %struct.string_list_item** %6, align 8
  %11 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load %struct.string_list_item*, %struct.string_list_item** %6, align 8
  %16 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to %struct.oid_array*
  store %struct.oid_array* %18, %struct.oid_array** %3, align 8
  br label %27

19:                                               ; preds = %2
  %20 = call i64 @xcalloc(i32 1, i32 4)
  %21 = load %struct.string_list_item*, %struct.string_list_item** %6, align 8
  %22 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  %23 = load %struct.string_list_item*, %struct.string_list_item** %6, align 8
  %24 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to %struct.oid_array*
  store %struct.oid_array* %26, %struct.oid_array** %3, align 8
  br label %27

27:                                               ; preds = %19, %14
  %28 = load %struct.oid_array*, %struct.oid_array** %3, align 8
  ret %struct.oid_array* %28
}

declare dso_local %struct.string_list_item* @string_list_insert(%struct.string_list*, i8*) #1

declare dso_local i64 @xcalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
